--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,17 @@
     <string name="forget">Forgot password?</string>
     <string name="register">Sign Up</string>
     <string name="email">Email Address</string>
+    <string name="hello">Hello</string>
+    <string name="welcomeLaza">Welcome to Laza.</string>
+    <string name="search">Search..</string>
+    <string name="choose">Choose Brand</string>
+    <string name="view">View All</string>
+    <string name="arrival">New Arrival</string>
+    <string name="home">Home</string>
+    <string name="wish">Favorites</string>
+    <string name="basket">Basket</string>
+    <string name="pay">Cart</string>
+
+
+
 </resources>
