Brand section added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="hello">Hello</string>
     <string name="welcomeLaza">Welcome to Laza.</string>
     <string name="search">Search..</string>
-    <string name="choose">Choose Brand</string>
+    <string name="choose">Choose Category</string>
     <string name="view">View All</string>
     <string name="arrival">New Arrival</string>
     <string name="home">Home</string>
